# adorable

./: .readthedocs.yaml  LICENSE  README.md  example.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: docs-issue.md  missing-terminal-support.md
adorable/: __init__.py  _palette.py  ansi.py  color.py  markup.py  style.py  stylesheet.py  term.py  utils.py  webcolors.py
adorable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: .buildinfo  404.html  api.html  caution-ansi-strings.html  changelog.html  color-system.html  creating-color.html  future.html  genindex.html  glossary.html  index.html  installation.html  known-issues.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  show-appreciation.html  style-string.html  stylesheet.html  why-adorable.html
docs/_modules/: adorable.html  index.html
docs/_modules/adorable/: ansi.html  color.html  markup.html  style.html  term.html  (+1 more)
docs/_sources/: 404.rst.txt  caution-ansi-strings.rst.txt  changelog.rst.txt  color-system.rst.txt  creating-color.rst.txt  future.rst.txt  glossary.rst.txt  installation.rst.txt  quickstart.rst.txt  style-string.rst.txt  stylesheet.rst.txt
docs/_static/: documentation_options.js  spelling_wordlist.txt
docs_src/source/: 404.rst  api.rst  changelog.rst  color-system.rst  conf.py  index.rst  installation.rst  known-issues.rst  show-appreciation.rst  style-string.rst  why-adorable.rst
src/adorable/: __init__.py  _palette.py  ansi.py  color.py  markup.py  style.py  stylesheet.py  term.py  utils.py  webcolors.py
tests/: test_color.py
(+2 files in other folders)
